# customer-agent-platform

./: .gitignore  README.md  pyproject.toml  refresh_demo_data.py  requirements.txt  seed_demo_orders_1001.py  setup.py  start_agent.py
commerce_service_app/: .env.example  config.yml  endpoints.yml  gen_data.py
commerce_service_app/actions/: __init__.py  action_logistics.py  action_order.py  action_postsale.py  db.py
commerce_service_app/addons/: __init__.py  create_indexing.py  hybrid_knowledge_retriever.py  information_retrieval.py  yunwen_mcp_retriever.py
commerce_service_app/domain/: domain_logistics.yml  domain_order.yml  domain_patterns.yml  domain_postsale.yml
commerce_service_app/models/: README.md
customer_agent/: __init__.py  __main__.py
customer_agent/agent/: __init__.py  actions.py  agent.py  message_processor.py
customer_agent/api/: __init__.py  server.py
customer_agent/channels/: __init__.py  console_channel.py  inspect_proxy.py  rest_channel.py  socketio_channel.py
customer_agent/cli/: __init__.py  export.py  init.py  inspect.py  run.py  shell.py  train.py
docker/: .env.example  docker-compose.yaml
scripts/: compare_command_parser_models.py  export_command_parser_llamafactory.py  generate_command_parser_dataset.py  smoke_command_parser_ft.py
tests/: test_actions.py  test_api_pages.py  test_command_parser_dataset.py  test_command_parser_llamafactory_export.py  test_command_parser_output_formats.py  test_enterprise_search_policy.py  test_graphrag_fallback.py  test_hybrid_knowledge_retriever.py  test_yunwen_mcp_retriever.py
(+89 files in other folders)
