[project]
name = "customer-agent-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "colorama>=0.4.0,<1.0.0",
    "dashscope>=1.20.0",
    "dbutils>=3.0.0",
    "faker>=18.0.0",
    "fastmcp>=2.9.2",
    "fastapi>=0.100.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "jieba>=0.42.0",
    "jinja2>=3.0.0,<4.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "neo4j>=5.0.0",
    "neo4j-graphrag>=1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<2.11.0",
    "pydantic-settings>=2.0.0,<2.15.0",
    "pymysql>=1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-socketio>=5.0.0,<6.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rich>=10.0.0,<15.0.0",
    "ruamel-yaml>=0.17.0,<1.0.0",
    "sentence-transformers>=2.2.0",
    "sqlacodegen>=3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "uvicorn>=0.20.0,<1.0.0",
]
